# tentacle

./: .gitattributes  LICENSE  README.md
hardware/cad/: termination-vertebrae.step
hardware/cad/printing/: 6700-2RS-pusher.stl  6mm-quick-connect-clip.stl  Pulley-28BYJ-48.stl  Pulley-28BYJ-48_A.stl  Pulley-28BYJ-48_B.stl  base-lid-board-mount.stl  base-lid-nema-11.stl  base-lid.stl  base-lid_28BYJ-48.stl  base-lid_28BYJ-48_insert-venty.stl  base-lid_28BYJ-48_insert.stl  base.stl  pulley-28BYK-48_6700-2RS.stl  pulley-nema-11.stl  tentacle-spacer-5mm.stl  termination-hold-down-jig.stl  termination-spacer-5mm.stl  termination-spacer-6mm.stl  termination-vertabrea-v2.stl  termination-vertabrea.stl  vertebrae-disk-4.25mm.stl  vertebrae-disk-6.25mm.stl  vertebrae-disk-half-4.25mm.stl  vertebrae-disk-half-6.25mm.stl  vertebrae.stl
hardware/cad/printing/X1C/: Pulley-28BYJ-48_PC.3mf  base.3mf  motor-body.3mf  pulley-28BYK-48_6700-2RS_ASA.3mf  tentacle-all.3mf  termination-vertabrea-v2.3mf
hardware/pcb/dev-board/: .gitignore  README.md  dev-board.kicad_pcb  dev-board.kicad_prl  dev-board.kicad_pro  dev-board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/pcb/tentacle-board/: #auto_saved_files#  .gitignore  README.md  _autosave-tentacle-board.kicad_sch  _autosave-tentacle-board.sch  fp-info-cache  fp-lib-table  motor-driver.kicad_sch  place_footprints.ini  sym-lib-table  tentacle-board.kicad_pcb  tentacle-board.kicad_prl  tentacle-board.kicad_pro  tentacle-board.kicad_sch  tentacle-board.step  ~tentacle-board.kicad_pcb.lck
hardware/printing/: 6mm-quick-connect-clip-v2.stl  6mm-quick-connect-clip.stl  base-lid.stl  base-lid_28BYJ-48-6-bearings.stl  base-lid_28BYJ-48_v2.stl  base.stl  pulley-28BYK-48.stl  pulley-28BYK-48_v2.stl  pulley.stl  tentacle-spacer-4.2mm.stl  tentacle-spacer-4mm.stl  tentacle-spacer-6mm.stl  tentacle-vertebrae.stl  termination-spacer-4mm.stl  termination-vertabrea.stl
hardware/printing/X1C/: base-lid_28BYJ-48-6-bearings_ASA.3mf  pulley-28BYK-48_6700-2RS_ASA.3mf
hardware/printing/old/: base-3mm-bearing-4mm-space.stl  base-new-bearings.stl  base_6700-2RS.stl
hardware/printing/test-stand/: tent-stand-base.stl  tent-stand-leg.stl  tent-stand-top-table.stl
software/rp2040/tentacle-controller/src/: CMakeLists.txt  main.c
software/tentacle-controller/: CMakeLists.txt  README.md  deploy.sh
software/tentacle-controller/src/: main.cpp  tentacle-controller.cpp  tentacle-controller.h  util.cpp  util.h
software/tentacle-controller/src/boards/: pico-dev-board.h  tentacle-controller-board.h
software/tentacle-controller/src/motor-driver/: driver-configuration.cpp  driver-configuration.h  motor-driver.cpp  motor-driver.h  pio-stepper-driver.cpp  pio-stepper-driver.h  stepper-driver.cpp  stepper-driver.h  timer-motor-driver.cpp  timer-motor-driver.h  timer-stepper-driver.cpp  timer-stepper-driver.h
(+61 files in other folders)
